Fix off-centre navbar?

--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@
   text-align: center;
   padding: 8px;
   text-decoration: none;
-  font-size: 17px;
 }
 
 /* Change the color of links on hover */
